# camara-analytics

./: .env.example  .gitignore  README.md  pyproject.toml
civic_framework/: README.md  __init__.py  collector.py  database.py  metrics.py
civic_framework/adapters/: __init__.py  base.py  florianopolis.py
modules/: __init__.py
modules/legis_notifier/: .env.example  __init__.py  config.py  main.py  monitor.py  notifier.py  persistence.py
modules/municipal_tracker/: loader_municipal.py
modules/network_analyst/: __init__.py  fetcher.py  graph_builder.py  main.py  visualizer.py
modules/parlamentar_dashboard/: __init__.py  app.py  charts.py  data_loader.py
modules/tema_miner/: __init__.py  ai_core.py  analyzer.py  cleaner.py  fetcher.py  main.py  visualizer.py
modules/tracker_gastos/: __init__.py  analyzer.py  config.py  extractor.py  main.py  processor.py  reporter.py
